--- a/index.html
+++ b/index.html
@@ -3,9 +3,95 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sounds of Africa</title>
 </head>
 <body>
-    
+
+    <!-- Hero Section -->
+    <header>
+        <div style="text-align: center; background-color: #000; color: white; padding: 20px;">
+            <img src="/Images/African music.jpg" alt="African music" >
+            <h1>Welcome to Sounds of Africa</h1>
+            <p>Explore the vibrant and diverse musical landscape of Africa.</p>
+
+            <!-- Embedded YouTube Video -->
+            <div style="margin-top: 20px;">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/your-video-id" title="Overview of African Music" allowfullscreen></iframe>
+            </div>
+        </div>
+    </header>
+
+    <!-- Featured Artists Section -->
+    <section>
+        <h2 style="text-align: center; margin-top: 30px;">Featured Artists</h2>
+        <div style="display: flex; justify-content: space-around; padding: 20px;">
+            <!-- Artist 1 -->
+            <div style="text-align: center; width: 200px; background-color: #f4f4f4; padding: 10px;">
+                <img src="/Images/Artist1.jpg" alt="Artist 1" style="width: 100%; height: 200px; object-fit: cover;">
+                <h3>Artist Name 1</h3>
+                <p>Short bio of the artist.</p>
+                <a href="artist1.html">Learn more about Artist 1</a>
+            </div>
+
+            <!-- Artist 2 -->
+            <div style="text-align: center; width: 200px; background-color: #f4f4f4; padding: 10px;">
+                <img src="/Images/Artist2.jpg" alt="Artist 2" style="width: 100%; height: 200px; object-fit: cover;">
+                <h3>Artist Name 2</h3>
+                <p>Short bio of the artist.</p>
+                <a href="artist2.html">Learn more about Artist 2</a>
+            </div>
+
+            <!-- Artist 3 -->
+            <div style="text-align: center; width: 200px; background-color: #f4f4f4; padding: 10px;">
+                <img src="/Images/Artist3.jpg" alt="Artist 3" style="width: 100%; height: 200px; object-fit: cover;">
+                <h3>Artist Name 3</h3>
+                <p>Short bio of the artist.</p>
+                <a href="artist3.html">Learn more about Artist 3</a>
+            </div>
+
+            <!-- Artist 4 (Optional) -->
+            <div style="text-align: center; width: 200px; background-color: #f4f4f4; padding: 10px;">
+                <img src="/Images/Artist4.jpg" alt="Artist 4" style="width: 100%; height: 200px; object-fit: cover;">
+                <h3>Artist Name 4</h3>
+                <p>Short bio of the artist.</p>
+                <a href="artist4.html">Learn more about Artist 4</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Explore by Genre Section -->
+    <section>
+        <h2 style="text-align: center; margin-top: 30px;">Explore by Genre</h2>
+        <div style="text-align: center; padding: 20px;">
+            <a href="genre1.html" style="padding: 10px; margin: 5px; background-color: #f4f4f4; text-decoration: none; color: #333;">Genre 1</a>
+            <a href="genre2.html" style="padding: 10px; margin: 5px; background-color: #f4f4f4; text-decoration: none; color: #333;">Genre 2</a>
+            <a href="genre3.html" style="padding: 10px; margin: 5px; background-color: #f4f4f4; text-decoration: none; color: #333;">Genre 3</a>
+        </div>
+    </section>
+
+    <!-- Latest News Section -->
+    <section>
+        <h2 style="text-align: center; margin-top: 30px;">Latest News</h2>
+        <div style="text-align: center; padding: 20px;">
+            <!-- News Article 1 -->
+            <div style="background-color: #f4f4f4; padding: 10px; margin-bottom: 20px;">
+                <h3><mark>African Music Revolution</mark>: New Trends in the Industry</h3>
+                <p>Discover the latest trends and artists shaping the African music industry. <a href="news-article1.html">Read more</a></p>
+            </div>
+
+            <!-- News Article 2 -->
+            <div style="background-color: #f4f4f4; padding: 10px; margin-bottom: 20px;">
+                <h3><mark>Grammy Awards</mark>: African Artists Shining Globally</h3>
+                <p>How African artists are making their mark at the Grammy Awards. <a href="news-article2.html">Read more</a></p>
+            </div>
+
+            <!-- News Article 3 (Optional) -->
+            <div style="background-color: #f4f4f4; padding: 10px; margin-bottom: 20px;">
+                <h3><mark>Exploring the Diversity of African Music Genres</mark></h3>
+                <p>An in-depth look at the various music genres across the African continent. <a href="news-article3.html">Read more</a></p>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
