Artis's page with Mad directionimbeded in iframe

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <nav style="background-color: #333; padding: 10px 0; text-align: center;">
         <a href="#home" style="color: white; padding: 10px 20px; text-decoration: none;">Home</a>
         <a href="#genres" style="color: white; padding: 10px 20px; text-decoration: none;">Genres</a>
+        <a href="Artists.html" style="color: white; padding: 10px 20px; text-decoration: none;">Artists</a>
         <a href="#contact" style="color: white; padding: 10px 20px; text-decoration: none;">Contact</a>
-        <a href="#artists" style="color: white; padding: 10px 20px; text-decoration: none;">Artists</a>
         <a href="#about" style="color: white; padding: 10px 20px; text-decoration: none;">About</a>
     </nav>
 
@@ -36,57 +36,68 @@
         </div>
     </header>
 
+   
     <!-- Featured Artists Section -->
     <section id="artists">
         <h2 style="text-align: center; margin-top: 30px;">Featured Artists</h2>
         <div style="display: flex; justify-content: space-around; padding: 20px;">
             <!-- Artist 1 -->
-            <div style="text-align: center; width: 200px; background-color: #f4f4f4; padding: 10px;">
-                <img src="/Images/Davido.jpg" alt="Artist 1" style="width: 100%; height: 200px; object-fit: cover;">
+            <figure style="text-align: center; width: 200px; background-color: #f4f4f4; padding: 10px;">
+                <img src="/Images/Davido.jpg" alt="Davido" style="width: 100%; height: 200px; object-fit: cover;">
+                <figcaption>Davido - Nigerian singer, songwriter, and record producer.</figcaption>
                 <h3><a href="davido.html" style="text-decoration: none; color: black;">Davido</a></h3>
                 <p>Short bio of the artist.</p>
                 <a href="https://en.wikipedia.org/wiki/Davido">Learn more about Davido</a>
-            </div>
+            </figure>
 
             <!-- Artist 2 -->
-            <div style="text-align: center; width: 200px; background-color: #f4f4f4; padding: 10px;">
-                <img src="/Images/Angelique.jpg" alt="Artist 2" style="width: 100%; height: 200px; object-fit: cover;">
+            <figure style="text-align: center; width: 200px; background-color: #f4f4f4; padding: 10px;">
+                <img src="/Images/Angelique.jpg" alt="Angélique Kidjo" style="width: 100%; height: 200px; object-fit: cover;">
+                <figcaption>Angélique Kidjo - Renowned Beninese singer and activist.</figcaption>
                 <h3><a href="angelique.html" style="text-decoration: none; color: black;">Angélique Kidjo</a></h3>
                 <p>Short bio of the artist.</p>
                 <a href="https://www.kidjo.com/biography">Learn more about Angélique Kidjo</a>
-            </div>
+            </figure>
 
             <!-- Artist 3 -->
-            <div style="text-align: center; width: 200px; background-color: #f4f4f4; padding: 10px;">
-                <img src="/Images/mbonyi.jpg" alt="Artist 3" style="width: 100%; height: 200px; object-fit: cover;">
-                <h3><a href="mbonyi.html" style="text-decoration: none; color: black;">Islael Mbonyi</a></h3>
+            <figure style="text-align: center; width: 200px; background-color: #f4f4f4; padding: 10px;">
+                <img src="/Images/mbonyi.jpg" alt="Israel Mbonyi" style="width: 100%; height: 200px; object-fit: cover;">
+                <figcaption>Israel Mbonyi - Popular gospel artist from Rwanda.</figcaption>
+                <h3><a href="mbonyi.html" style="text-decoration: none; color: black;">Israel Mbonyi</a></h3>
                 <p>Short bio of the artist.</p>
-                <a href="https://rwanda-music.fandom.com/wiki/Israel_Mbonyi">Learn more about Islael Mbonyi</a>
-            </div>
+                <a href="https://rwanda-music.fandom.com/wiki/Israel_Mbonyi">Learn more about Israel Mbonyi</a>
+            </figure>
 
             <!-- Artist 4 -->
-            <div style="text-align: center; width: 200px; background-color: #f4f4f4; padding: 10px;">
-                <img src="/Images/Bruce.webp" alt="Artist 4" style="width: 100%; height: 200px; object-fit: cover;">
-                <h3><a href="bluce.html" style="text-decoration: none; color: black;">Bluce Melodie</a></h3>
+            <figure style="text-align: center; width: 200px; background-color: #f4f4f4; padding: 10px;">
+                <img src="/Images/Bruce.webp" alt="Bruce Melodie" style="width: 100%; height: 200px; object-fit: cover;">
+                <figcaption>Bruce Melodie - Rwandan music sensation known for Afrobeat hits.</figcaption>
+                <h3><a href="bluce.html" style="text-decoration: none; color: black;">Bruce Melodie</a></h3>
                 <p>Short bio of the artist.</p>
-                <a href="https://en.wikipedia.org/wiki/Bruce_Melodie">Learn more about Bluce Melodie</a>
-            </div>
+                <a href="https://en.wikipedia.org/wiki/Bruce_Melodie">Learn more about Bruce Melodie</a>
+            </figure>
         </div>
     </section>
 
 
     <!-- Explore by Genre Section -->
-    <section id="genres">
-        <h2 style="text-align: center; margin-top: 30px;">Explore by Genre</h2>
-        <div style="text-align: center; padding: 20px;">
-            <a href="afrobeat.html"
-                style="padding: 10px; margin: 5px; background-color: #f4f4f4; text-decoration: none; color: #333;">Afrobeat</a>
-            <a href="highlife.html"
-                style="padding: 10px; margin: 5px; background-color: #f4f4f4; text-decoration: none; color: #333;">Highlife</a>
-            <a href="soukous.html"
-                style="padding: 10px; margin: 5px; background-color: #f4f4f4; text-decoration: none; color: #333;">Soukous</a>
-        </div>
-    </section>
+<section id="genres">
+    <h2 style="text-align: center; margin-top: 30px;">Explore by Genre</h2>
+    <div style="text-align: center; padding: 20px;">
+        <a href="afrobeat.html"
+            style="padding: 10px; margin: 5px; background-color: #f4f4f4; text-decoration: none; color: #333;">
+            <mark>Afrobeat</mark>
+        </a>
+        <a href="highlife.html"
+            style="padding: 10px; margin: 5px; background-color: #f4f4f4; text-decoration: none; color: #333;">
+            <mark>Highlife</mark>
+        </a>
+        <a href="soukous.html"
+            style="padding: 10px; margin: 5px; background-color: #f4f4f4; text-decoration: none; color: #333;">
+            <mark>Soukous</mark>
+        </a>
+    </div>
+</section>
 
     <!-- Latest News Section -->
     <section id="contact">
