adding new pages, contact, genre and about

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <!-- Navigation Bar -->
     <nav style="background-color: #333; padding: 10px 0; text-align: center;">
         <a href="#home" style="color: white; padding: 10px 20px; text-decoration: none;">Home</a>
-        <a href="#genres" style="color: white; padding: 10px 20px; text-decoration: none;">Genres</a>
+        <a href="Genre.html" style="color: white; padding: 10px 20px; text-decoration: none;">Genres</a>
         <a href="Artists.html" style="color: white; padding: 10px 20px; text-decoration: none;">Artists</a>
-        <a href="#contact" style="color: white; padding: 10px 20px; text-decoration: none;">Contact</a>
-        <a href="#about" style="color: white; padding: 10px 20px; text-decoration: none;">About</a>
+        <a href="About.html" style="color: white; padding: 10px 20px; text-decoration: none;">About us</a>
+        <a href="#contact" style="color: white; padding: 10px 20px; text-decoration: none;">Info</a>
     </nav>
 
     <!-- Hero Section -->
